@@ -750,7 +750,7 @@ static int cmd_search(constant char *cmd, constant unsigned char *table, constan
 			{
 				action = taction;
 				*extra = textra;
-			} else if (match > 0) /* cmd is a prefix of this table entry */
+			} else if (match > 0 && action == A_INVALID) /* cmd is a prefix of this table entry */
 			{
 				action = A_PREFIX;
 			}
