@@ -1,5 +1,5 @@
 '\" t
-.TH LESS 1 "Version 678: 01 May 2025"
+.TH LESS 1 "Version 679: 28 May 2025"
 .SH NAME
 less \- display the contents of a file in a terminal
 .SH SYNOPSIS
