@@ -1,4 +1,4 @@
-.TH LESSECHO 1 "Version 678: 01 May 2025"
+.TH LESSECHO 1 "Version 679: 28 May 2025"
 .SH NAME
 lessecho \- expand metacharacters
 .SH SYNOPSIS
